--- a/k8s-built.yaml
+++ b/k8s-built.yaml
@@ -205,7 +205,7 @@ kind: Ingress
 metadata:
   name: ingress-router
   annotations:
-    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
     - host: localhost
@@ -223,27 +223,19 @@ spec:
     - host: api.localhost
       http:
         paths:
-          - path: /events
+          - path: /events.*
             backend:
               serviceName: logging-api
               servicePort: 80
-          - path: /Productos
+          - path: /(Productos|Categorias).*
             backend:
               serviceName: products-api
               servicePort: 80
-          - path: /Categorias
-            backend:
-              serviceName: products-api
-              servicePort: 80
-          - path: /pedidos
+          - path: /pedidos.*
             backend:
               serviceName: orders-api
               servicePort: 80
-          - path: /Factura
-            backend:
-              serviceName: invoicing-api
-              servicePort: 80
-          - path: /Organizacion
+          - path: /(Factura|Organizacion).*
             backend:
               serviceName: invoicing-api
               servicePort: 80
