--- a/k8s-volume.yaml
+++ b/k8s-volume.yaml
@@ -11,7 +11,7 @@
 # the way it works is like a template or the more well-known inheritance in object-oriented programming languages, defining
 # the local volume on that preset and then being used by all the pods which have been referenced.
 ---
-apiVersion: v1 # https://kubernetes.io/docs/concepts/storage/persistent-volumes/#persistent-volumes https://kubernetes.io/docs/tasks/configure-pod-container/configure-persistent-volume-storage/
+apiVersion: v1 # https://kubernetes.io/docs/concepts/storage/persistent-volumes/#persistent-volumes https://kubernetes.io/docs/tasks/configure-pod-container/configure-persistent-volume-storage/ https://kubernetes.io/docs/concepts/storage/volumes/
 kind: PersistentVolume
 metadata:
   name: shared-volume
