Fix exceded buffer size

--- a/k8s-built.yaml
+++ b/k8s-built.yaml
@@ -206,6 +206,9 @@ metadata:
   name: ingress-router
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/proxy-buffering: "on"
+    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
+    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
 spec:
   rules:
     - host: localhost
