--- a/k8s-volume.yaml
+++ b/k8s-volume.yaml
@@ -296,8 +296,11 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress # https://kubernetes.io/docs/concepts/services-networking/ingress/#ingress-controllers https://stackoverflow.com/questions/51511547/empty-address-kubernetes-ingress
 metadata:
   name: ingress-router
-  annotations:
+  annotations: # https://github.com/kubernetes/ingress-nginx/blob/master/docs/user-guide/nginx-configuration/annotations.md
     nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/proxy-buffering: "on" # it's supposed to be off, but its behavior says otherwise
+    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
+    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
 spec:
   rules:
     - host: localhost
