--- a/k8s-volume.yaml
+++ b/k8s-volume.yaml
@@ -24,7 +24,7 @@ spec:
   accessModes:
     - ReadWriteOnce # ReadOnlyMany seems to be unsupported on HostPath volume plugin
   hostPath:
-    path: /path/to/product-warehouse-manager-aos
+    path: /home/manuel/Documents/vscode-workspace/product-warehouse-manager-aos
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -49,6 +49,7 @@ spec:
   replicas: 1
   template:
     metadata:
+      name: logging-api
       labels:
         app: logging-api
     spec:
@@ -56,7 +57,7 @@ spec:
         - name: logging-api
           image: maanuelmm/prism:tini
           args:
-            - mock 
+            - mock
             - -d
             - -h
             - 0.0.0.0
@@ -64,7 +65,7 @@ spec:
           volumeMounts:
             - mountPath: /app
               name: logging-api-spec
-              subPath: app/logging-api/specification
+              subPath: specifications/logging-api
               readOnly: true
           ports:
             - containerPort: 4010
@@ -98,6 +99,7 @@ spec:
   replicas: 1
   template:
     metadata:
+      name: products-api
       labels:
         app: products-api
     spec:
@@ -105,7 +107,7 @@ spec:
         - name: products-api
           image: maanuelmm/prism:tini
           args:
-            - mock 
+            - mock
             - -d
             - -h
             - 0.0.0.0
@@ -113,7 +115,7 @@ spec:
           volumeMounts:
             - mountPath: /app
               name: products-api-spec
-              subPath: app/products-api/specification
+              subPath: specifications/products-api
               readOnly: true
           ports:
             - containerPort: 4010
@@ -147,6 +149,7 @@ spec:
   replicas: 1
   template:
     metadata:
+      name: orders-api
       labels:
         app: orders-api
     spec:
@@ -154,7 +157,7 @@ spec:
         - name: orders-api
           image: maanuelmm/prism:tini
           args:
-            - mock 
+            - mock
             - -d
             - -h
             - 0.0.0.0
@@ -162,7 +165,7 @@ spec:
           volumeMounts:
             - mountPath: /app
               name: orders-api-spec
-              subPath: app/orders-api/specification
+              subPath: specifications/orders-api
               readOnly: true
           ports:
             - containerPort: 4010
@@ -196,6 +199,7 @@ spec:
   replicas: 1
   template:
     metadata:
+      name: invoicing-api
       labels:
         app: invoicing-api
     spec:
@@ -203,7 +207,7 @@ spec:
         - name: invoicing-api
           image: maanuelmm/prism:tini
           args:
-            - mock 
+            - mock
             - -d
             - -h
             - 0.0.0.0
@@ -211,7 +215,7 @@ spec:
           volumeMounts:
             - mountPath: /app
               name: invoicing-api-spec
-              subPath: app/invoicing-api/specification
+              subPath: specifications/invoicing-api
               readOnly: true
           ports:
             - containerPort: 4010
@@ -247,6 +251,7 @@ spec:
   replicas: 1
   template:
     metadata:
+      name: swagger-ui
       labels:
         app: swagger-ui
         #role: master
@@ -257,11 +262,11 @@ spec:
           image: swaggerapi/swagger-ui:v3.25.3
           env:
             - name: URLS
-              value: '[{url:"/app/logging-api/specification/openapi.yaml",name:"Logging API"},{url:"/app/products-api/specification/openapi.yaml",name:"Products API"},{url:"/app/invoicing-api/specification/openapi.yaml",name:"Invoicing API"},{url:"/app/orders-api/specification/openapi.json",name:"Orders API"}]'
+              value: '[{url:"/app/logging-api/openapi.yaml",name:"Logging API"},{url:"/app/products-api/openapi.yaml",name:"Products API"},{url:"/app/invoicing-api/openapi.yaml",name:"Invoicing API"},{url:"/app/orders-api/openapi.json",name:"Orders API"}]'
           volumeMounts:
             - mountPath: /usr/share/nginx/html/app
               name: swagger-ui-specs
-              subPath: app
+              subPath: specifications
               readOnly: true
           ports:
             - containerPort: 8080
@@ -271,10 +276,10 @@ spec:
           persistentVolumeClaim:
             claimName: shared-claim
           #hostPath:
-            # directory location on host
-            #path: /home/manuel/Documents/vscode-workspace/product-warehouse-manager-aos/app
-            # this field is optional
-            #type: Directory
+          # directory location on host
+          #path: /home/manuel/Documents/vscode-workspace/product-warehouse-manager-aos/app
+          # this field is optional
+          #type: Directory
 ---
 apiVersion: v1
 kind: Service
@@ -310,7 +315,7 @@ spec:
               serviceName: swagger-ui
               servicePort: 80
     - host: swagger.localhost # Not the most elegant way to do this, but it's a nginx-ingress limitation of only one host.
-      http:                   # Using traefik could be a good way to solve this situation, but time is my enemy right now.
+      http: # Using traefik could be a good way to solve this situation, but time is my enemy right now.
         paths:
           - backend:
               serviceName: swagger-ui
