--- a/k8s-volume.yaml
+++ b/k8s-volume.yaml
@@ -20,9 +20,9 @@ metadata:
 spec:
   storageClassName: manual
   capacity:
-    storage: 100Mi # I'm forced to do this
+    storage: 20Gi
   accessModes:
-    - ReadWriteOnce # ReadOnlyMany seems to be unsupported on HostPath volume plugin
+    - ReadWriteOnce
   hostPath:
     path: /home/manuel/Documents/vscode-workspace/product-warehouse-manager-aos
 ---
@@ -36,7 +36,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 100Mi
+      storage: 20Gi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -55,24 +55,12 @@ spec:
     spec:
       containers:
         - name: logging-api
-          image: maanuelmm/prism:tini
-          args:
-            - mock
-            - -d
-            - -h
-            - 0.0.0.0
-            - /app/openapi.yaml
-          volumeMounts:
-            - mountPath: /app
-              name: logging-api-spec
-              subPath: specifications/logging-api
-              readOnly: true
+          image: maanuelmm/logging-api-aos:latest
+          env:
+            - name: DB_HOST
+              value: logging-db
           ports:
             - containerPort: 4010
-      volumes:
-        - name: logging-api-spec
-          persistentVolumeClaim:
-            claimName: shared-claim
 ---
 apiVersion: v1
 kind: Service
@@ -87,6 +75,56 @@ spec:
       targetPort: 4010
   selector:
     app: logging-api
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: logging-db
+spec:
+  selector:
+    matchLabels:
+      app: logging-db
+  replicas: 1 # discovery.type must be changed and do some stuff that i'm not aware of
+  template:
+    metadata:
+      name: logging-db
+      labels:
+        app: logging-db
+    spec:
+      containers:
+        - name: logging-db
+          image: docker.elastic.co/elasticsearch/elasticsearch:7.7.0
+          env:
+            - name: discovery.type
+              value: single-node
+          volumeMounts:
+            - mountPath: /usr/share/elasticsearch/data
+              name: logging-db-volume
+              subPath: db-data
+          ports:
+            - containerPort: 9200
+            - containerPort: 9300 # used when using multi-node elasticsearch databases
+      volumes:
+        - name: logging-db-volume
+          persistentVolumeClaim:
+            claimName: shared-claim
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: logging-db
+  labels:
+    app: logging-db
+spec:
+  ports:
+    - name: "logging-db"
+      port: 9200
+      targetPort: 9200
+    - name: "logging-db-discovery"
+      port: 9300
+      targetPort: 9300
+  selector:
+    app: logging-db
 ---
 apiVersion: apps/v1
 kind: Deployment
